--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Great Idea - Responsive I</title>
+
+  <title>Great Idea!</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
 </head>
 
-<body>
-
-
+  <body class="container">
 
     <div class="nav-bar">
 
@@ -46,7 +48,7 @@
      <div>
     </section> 
   
-  <section class="main-content">
+   <section class="main-content">
     <div class="top-content">
       <div class="features">
         <h4>Features</h4>
